syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.grpc.user";
option java_outer_classname = "UserProto";

service UserService {
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
}

message GetUserProfileRequest {
  string user_id = 1;
}

message GetUserProfileResponse {
  User user = 1;
}

message UpdateUserProfileRequest {
  string user_id = 1;
  string username = 2;
  string avatar_url = 3;
}

message UpdateUserProfileResponse {
  bool success = 1;
  string message = 2;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string avatar_url = 4;
  string created_at = 5;
}
